--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.nav{
+  display: flex;
+  justify-content: flex-end;
+  border: 2px solid red;
+}
+.nav-logo{
+  height: auto; 
+  width: 40%; 
+}
