--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -3,9 +3,12 @@
   width:100%; 
 } */
 .App {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   align-items: center;
+  font-family: 'Quicksand', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-container,.nav-link  {
@@ -27,8 +30,37 @@
   display:flex ;
   flex-direction: column;
   align-items:center;
+  height: 60vh;
+  justify-content: center;
 }
 
+.form-view {
+  width: 100vw;
+}
+
+input, 
+select {
+  font-family: 'Quicksand', sans-serif;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  background-color: white;
+  border-color: #53868f;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  padding: .75rem;
+  outline: none !important;
+  border-style: solid;
+  width: 20vw;
+
+}
+
+input:focus,
+select:focus { 
+  outline: none !important;
+  border-color: #b7990d;
+  border-style: solid;
+}
 
 /* .button-container {
   display: flex;
@@ -99,5 +131,9 @@
     margin-top: 10%;
   }
 
+  input,
+  select {
+    width: 50vw;
+  }
 
 }
