Added item input css

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -235,7 +235,15 @@ ul {
   cursor: pointer;
 }
 
+.add-item-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
 
+.text {
+  margin-right: 5px;
+}
 
 .list-checkbox {
   width: 2vw;
