CSS changes and commented code for created item logic

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -232,8 +232,8 @@ ul {
   margin-top: 10px;
 }
 
-.added-items-title{
-  margin-bottom: 50px;
+.added-items-container{
+  margin-bottom: 80px;
 }
 
 label,
